@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.96 [20110311] [svn:r60]
+Changelog for smp_utils-0.96 [20110314] [svn:r61]
   - remove doc/smp_utils.html , refer readers to web page
   - smp_discover_list: SAS-2 fix, add --summary option
   - smp_rep_exp_route_tbl: SAS-2 fix
@@ -10,7 +10,8 @@ Changelog for smp_utils-0.96 [20110311] [svn:r60]
   - smp_discover: add --summary and --zero options
   - smp_rep_manufacturer, smp_rep_phy_err_log, smp_rep_phy_sata:
     add --zero options
-  - smp_conf_general: correct request
+  - smp_conf_general: sync to SAS-2
+  - smp_phy_control: sync to SAS-2, SPL
 
 Changelog for smp_utils-0.95 [20101116] [svn:r47]
   - place link to smp_utils.html examples in man pages
